--- a/package.json
+++ b/package.json
@@ -3,24 +3,62 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@faker-js/faker": "^7.6.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.11.4",
+    "@tanstack/match-sorter-utils": "^8.7.6",
+    "@tanstack/react-table": "^8.7.6",
+    "@tanstack/table-core": "^8.7.6",
+    "classnames": "^2.3.2",
+    "dequal": "^2.0.3",
+    "jotai": "^1.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "react-json-view": "^1.21.3",
+    "tss-react": "^3.7.1"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^8.19.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@vitejs/plugin-react": "^3.0.1",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.2",
+    "prettier-plugin-import-sort": "^0.0.7",
+    "pretty-quick": "^3.1.3",
+    "typescript": "~4.9.4",
+    "typesync": "^0.9.2",
+    "vite": "^4.0.4",
+    "vite-plugin-checker": "^0.5.3",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint './src/**/*.{js,ts,tsx}'",
+    "format": "pretty-quick",
+    "format:all": "prettier --loglevel warn --write 'src/**/*.{js,ts,tsx,css}'",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +76,30 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "semi": false,
+    "jsxSingleQuote": true
+  },
+  "importSort": {
+    ".js, .jsx": {
+      "style": "module"
+    },
+    ".ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
+  },
+  "lint-staged": {
+    "src/*.{js,jsx,ts,tsx}": [
+      "prettier --no-color --write",
+      "yarn lint"
+    ],
+    "*.{css,scss,graphql}": [
+      "prettier --no-color --write"
     ]
   }
 }
