--- a/package.json
+++ b/package.json
@@ -3,53 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.11.4",
-    "@tanstack/match-sorter-utils": "^8.7.6",
-    "@tanstack/react-table": "^8.7.6",
-    "@tanstack/table-core": "^8.7.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
+    "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-table": "^8.8.5",
+    "@tanstack/table-core": "^8.8.5",
     "classnames": "^2.3.2",
     "dequal": "^2.0.3",
-    "jotai": "^1.13.0",
+    "jotai": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-json-view": "^1.21.3",
-    "tss-react": "^3.7.1"
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.19.1",
+    "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@vitejs/plugin-react": "^3.0.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "import-sort-cli": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.2",
+    "lint-staged": "^13.2.1",
+    "prettier": "^2.8.7",
     "prettier-plugin-import-sort": "^0.0.7",
     "pretty-quick": "^3.1.3",
-    "typescript": "~4.9.4",
-    "typesync": "^0.9.2",
-    "vite": "^4.0.4",
-    "vite-plugin-checker": "^0.5.3",
+    "typescript": "~5.0.4",
+    "typesync": "^0.10.0",
+    "vite": "4.3.0-beta.3",
+    "vite-plugin-checker": "^0.5.6",
     "vite-plugin-svgr": "^2.4.0",
-    "vite-tsconfig-paths": "^4.0.3"
+    "vite-tsconfig-paths": "^4.0.8"
   },
   "scripts": {
     "start": "vite",
