--- a/package.json
+++ b/package.json
@@ -3,46 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/css": "^11.10.6",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@faker-js/faker": "^7.6.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.11.16",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.0.2",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.3",
     "@tanstack/match-sorter-utils": "^8.8.4",
-    "@tanstack/react-table": "^8.8.5",
-    "@tanstack/table-core": "^8.8.5",
+    "@tanstack/react-table": "^8.9.3",
+    "@tanstack/table-core": "^8.9.3",
     "classnames": "^2.3.2",
     "dequal": "^2.0.3",
-    "jotai": "^2.0.3",
+    "jotai": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@ggascoigne/eslint-config": "^1.12.0",
-    "@testing-library/dom": "^9.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.38.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.8",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@vitejs/plugin-react": "^4.0.4",
+    "eslint": "^8.46.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.1",
-    "prettier": "^2.8.7",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.1",
     "pretty-quick": "^3.1.3",
-    "typescript": "~5.0.4",
-    "typesync": "^0.10.0",
-    "vite": "4.3.0-beta.3",
-    "vite-plugin-checker": "^0.5.6",
-    "vite-plugin-svgr": "^2.4.0",
-    "vite-tsconfig-paths": "^4.0.8"
+    "typescript": "~5.1.6",
+    "typesync": "^0.11.1",
+    "vite": "4.4.8",
+    "vite-plugin-checker": "^0.6.1",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "scripts": {
     "start": "vite",
@@ -50,7 +49,7 @@
     "serve": "vite preview",
     "lint": "eslint './src/**/*.{js,ts,tsx}'",
     "format": "pretty-quick",
-    "format:all": "prettier --loglevel warn --write 'src/**/*.{js,ts,tsx,css}'",
+    "format:all": "prettier --log-level warn --write 'src/**/*.{js,ts,tsx,css}'",
     "prepare": "husky install"
   },
   "browserslist": {
@@ -68,8 +67,7 @@
   "prettier": {
     "printWidth": 120,
     "singleQuote": true,
-    "semi": false,
-    "jsxSingleQuote": true
+    "semi": false
   },
   "lint-staged": {
     "src/*.{js,jsx,ts,tsx}": [
